--- a/berkut.html
+++ b/berkut.html
@@ -14,12 +14,14 @@
   .swiper-slide img{width:100%;height:100%;object-fit:cover}
   .swiper-pagination-bullet{background:rgba(255,255,255,.4)}
   .swiper-pagination-bullet-active{background:#fff;transform:scale(1.4)}
-  .card-body{padding:28px;text-align:center}
+  .card-body{padding:30px;text-align:center}
   h3{margin:0 0 16px;font-size:1.8em;color:#67e8f9;text-shadow:0 2px 5px rgba(0,0,0,.5)}
-  .price{font-size:1.6em;font-weight:bold;color:#86efac;margin:18px 0}
-  .contact{font-size:1.25em;margin:18px 0;color:#e2e8f0;line-height:1.6}
-  .name{color:#fcd34d;font-weight:bold;font-size:1.35em}
-  .btn{display:inline-block;margin:20px auto;padding:17px 45px;background:linear-gradient(135deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;font-size:1.15em;transition:.3s;box-shadow:0 5px 15px rgba(103,232,249,.4)}
+  .desc{font-size:1.15em;margin:15px 0;color:#e2e8f0;line-height:1.6}
+  .price{font-size:1.7em;font-weight:bold;color:#86efac;margin:20px 0}
+  .contact{margin:20px 0}
+  .name{color:#fcd34d;font-weight:bold;font-size:1.4em;margin-bottom:6px}
+  .phone{color:#fff;font-size:1.3em}
+  .btn{display:inline-block;margin:20px auto;padding:17px 50px;background:linear-gradient(135deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;font-size:1.2em;transition:.3s;box-shadow:0 5px 15px rgba(103,232,249,.4)}
   .btn:hover{transform:scale(1.05);box-shadow:0 8px 25px rgba(103,232,249,.5)}
 </style>
 </head>
@@ -31,17 +33,16 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Мирланов Мерген"></div>
-        <!-- сюда новые фото Мергена -->
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="card-body">
       <h3>Классическое шоу с беркутом</h3>
-      <p>Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</p>
+      <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
       <div class="price">от 8000 до 17000 сом</div>
       <div class="contact">
         <div class="name">Мирланов Мерген</div>
-        +996 500 059 988
+        <div class="phone">+996 500 059 988</div>
       </div>
       <a href="https://wa.me/996500059988?text=Здравствуйте,%20Мерген!%20Хочу%20на%20шоу%20с%20беркутом" class="btn">Написать в WhatsApp</a>
     </div>
@@ -52,19 +53,18 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="images/aidar.jpg" alt="Асылбеков Айдар"></div>
-        <!-- сюда новые фото Айдара -->
       </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="card-body">
-      <h3>Мастер-класс «Стань беркутчи»</h3>
-      <p>Боконбаево • 1,5 часа<br>Держите беркута на руке • Для детей и взрослых</p>
-      <div class="price">1500 сом с человека</div>
+      <h3>Классическое шоу с беркутом</h3>
+      <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
+      <div class="price">от 8000 до 17000 сом</div>
       <div class="contact">
         <div class="name">Асылбеков Айдар</div>
-        +996 702 487 381
+        <div class="phone">+996 702 487 381</div>
       </div>
-      <a href="https://wa.me/996702487381?text=Здравствуйте,%20Айдар!%20Хочу%20на%20мастер-класс" class="btn">Написать в WhatsApp</a>
+      <a href="https://wa.me/996702487381?text=Здравствуйте,%20Айдар!%20Хочу%20на%20шоу%20с%20беркутом" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 
