--- a/index.html
+++ b/index.html
@@ -1,168 +1,181 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Южный Берег Иссык-Куля</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom, #0a0a0a, #001020);
-      color: #f0f0f0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      overflow-x: hidden;
-    }
-    header {
-      height: 100vh;
-      background: url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      position: relative;
-    }
-    header::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.55);
-    }
-    .content {
-      position: relative;
-      z-index: 2;
-      padding: 0 20px;
-      width: 100%;
-    }
-    h1 {
-      font-size: clamp(3rem, 10vw, 7rem);
-      font-weight: 800;
-      letter-spacing: 4px;
-      margin-bottom: 10px;
-      color: #ffffff;
-      text-shadow: 0 4px 20px rgba(0,212,255,0.4);
-    }
-    .subtitle {
-      font-size: clamp(1.2rem, 4vw, 2rem);
-      opacity: 0.95;
-      margin-bottom: 70px;
-      font-weight: 300;
-      color: #a0f0ff;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Южный Берег Иссык-Куля • 2025</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
+<style>
+  *{margin:0;padding:0;box-sizing:border-box}
+  body{
+    font-family:'Inter',sans-serif;
+    background:#0a0a0a;
+    color:#f0f0f0;
+    min-height:100vh;
+    display:flex;
+    flex-direction:column;
+  }
+  header{
+    min-height:100vh;
+    background:url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    position:relative;
+  }
+  header::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    background:linear-gradient(to bottom,rgba(0,0,0,0.65),rgba(0,0,0,0.4));
+  }
+  .content{
+    position:relative;
+    z-index:2;
+    padding:0 20px;
+    width:100%;
+  }
+  h1{
+    font-size:clamp(2.8rem,9vw,7rem);
+    font-weight:800;
+    letter-spacing:3px;
+    margin-bottom:12px;
+    color:#fff;
+    text-shadow:0 4px 20px rgba(0,212,255,0.5);
+  }
+  .subtitle{
+    font-size:clamp(1.1rem,4vw,1.8rem);
+    font-weight:300;
+    opacity:0.95;
+    margin-bottom:50px;
+    color:#a0f0ff;
+  }
+  .categories{
+    display:grid;
+    gap:20px;
+    grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+    max-width:1400px;
+    margin:0 auto;
+    padding:0 20px 60px;
+  }
+  .cat-card{
+    background:rgba(25,35,50,0.92);
+    backdrop-filter:blur(16px);
+    border:1px solid rgba(0,212,255,0.25);
+    border-radius:26px;
+    overflow:hidden;
+    text-decoration:none;
+    transition:all .4s ease;
+    box-shadow:0 10px 30px rgba(0,0,0,0.5);
+  }
+  .cat-card:hover{
+    transform:translateY(-14px);
+    border-color:#00d4ff;
+    box-shadow:0 0 25px 60px rgba(0,212,255,0.35);
+  }
+  .cat-card img{
+    width:100%;
+    height:190px;
+    object-fit:cover;
+    transition:transform .5s;
+  }
+  .cat-card:hover img{transform:scale(1.1)}
+  .cat-title{
+    padding:22px 16px;
+    text-align:center;
+    font-size:1.4rem;
+    font-weight:700;
+    letter-spacing:1.8px;
+    color:#fff;
+  }
+  .cat-card:hover .cat-title{
+    color:#00ffcc;
+    text-shadow:0 0 20px rgba(0,255,204,0.7);
+  }
+  footer{
+    text-align:center;
+    padding:40px 20px 30px;
+    font-size:0.95rem;
+    opacity:0.9;
+    color:#88e0ff;
+    margin-top:auto;
+  }
 
-    /* КАРТОЧКИ КАТЕГОРИЙ */
-    .categories {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 24px;
-      justify-content: center;
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 0 20px;
+  /* === МОБИЛЬНЫЕ УЛУЧШЕНИЯ === */
+  @media (max-width:768px){
+    header{min-height:90vh}
+    .subtitle{margin-bottom:40px}
+    .categories{
+      gap:18px;
+      padding:0 16px 50px;
+      grid-template-columns:1fr 1fr; /* ровно 2 колонки */
     }
-    .cat-card {
-      background: rgba(25,35,50,0.9);
-      backdrop-filter: blur(14px);
-      border: 1px solid rgba(0,212,255,0.2);
-      border-radius: 24px;
-      overflow: hidden;
-      width: 280px;
-      transition: all 0.45s ease;
-      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
-      text-decoration: none;
+    .cat-card{
+      border-radius:22px;
     }
-    .cat-card:hover {
-      transform: translateY(-16px);
-      border-color: #00d4ff;
-      box-shadow: 0 24px 50px rgba(0,212,255,0.3);
-      background: rgba(25,45,65,0.95);
+    .cat-card img{height:150px}
+    .cat-title{
+      font-size:1.15rem;
+      padding:18px 12px;
+      letter-spacing:1.2px;
     }
-    .cat-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      transition: transform 0.5s;
+  }
+  @media (max-width:480px){
+    h1{letter-spacing:2px}
+    .categories{
+      grid-template-columns:1fr; /* одна колонка на самых маленьких экранах */
+      gap:22px;
+      padding-bottom:60px;
     }
-    .cat-card:hover img { transform: scale(1.12); }
-    .cat-title {
-      padding: 20px;
-      text-align: center;
-      font-size: 1.35rem;
-      font-weight: 700;
-      letter-spacing: 1.5px;
-      color: #ffffff;
-      transition: color 0.4s;
+    .cat-card img{height:180px}
+    .cat-title{
+      font-size:1.3rem;
+      padding:24px 16px;
     }
-    .cat-card:hover .cat-title {
-      color: #00ffcc;
-      text-shadow: 0 0 15px rgba(0,255,204,0.6);
-    }
-
-    footer {
-      text-align: center;
-      padding: 50px 20px;
-      font-size: 0.95rem;
-      opacity: 0.85;
-      margin-top: auto;
-      color: #88e0ff;
-    }
-
-    @media (max-width: 768px) {
-      .cat-card { width: calc(50% - 12px); }
-      .cat-card img { height: 140px; }
-      .cat-title { font-size: 1.1rem; padding: 16px; }
-    }
-    @media (max-width: 480px) {
-      .cat-card { width: 100%; }
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <header>
-    <div class="content">
-      <h1>ЮЖНЫЙ БЕРЕГ</h1>
-      <div class="subtitle">Лучшие места, отели и незабываемый отдых на Иссык-Куле</div>
 
-      <div class="categories">
-        <a href="hotels.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
-          <div class="cat-title">ОТЕЛИ</div>
-        </a>
+<header>
+  <div class="content">
+    <h1>ЮЖНЫЙ БЕРЕГ</h1>
+    <div class="subtitle">Лучшие отели, юрты, шоу беркутчи и туры на Иссык-Куле</div>
 
-        <a href="guest-houses.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Гостевые дома">
-          <div class="cat-title">ГОСТЕВЫЕ ДОМА</div>
-        </a>
-
-        <a href="yurt-camps.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1504280390367-361ea3373a5b?auto=format&fit=crop&w=800&q=80" alt="Юрточные лагеря">
-          <div class="cat-title">ЮРТОЧНЫЕ ЛАГЕРЯ</div>
-        </a>
-
-        <a href="berkut.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1603899122634-5b7c7e1f8c8b?auto=format&fit=crop&w=800&q=80" alt="Охота с беркутом">
-          <div class="cat-title">ОХОТА С БЕРКУТОМ</div>
-        </a>
-
-        <a href="beautiful-places.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=800&q=80" alt="Красивые места">
-          <div class="cat-title">КРАСИВЫЕ МЕСТА</div>
-        </a>
-
-        <a href="tours.html" class="cat-card">
-          <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Туры">
-          <div class="cat-title">ТУРЫ</div>
-        </a>
-      </div>
+    <div class="categories">
+      <a href="oteli.html" class="cat-card">
+        <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
+        <div class="cat-title">ОТЕЛИ</div>
+      </a>
+      <a href="guest-houses.html" class="cat-card">
+        <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Гостевые дома">
+        <div class="cat-title">ГОСТЕВЫЕ ДОМА</div>
+      </a>
+      <a href="yurt-camps.html" class="cat-card">
+        <img src="https://images.unsplash.com/photo-1504280390367-361ea3373a5b?auto=format&fit=crop&w=800&q=80" alt="Юрточные лагеря">
+        <div class="cat-title">ЮРТОЧНЫЕ ЛАГЕРЯ</div>
+      </a>
+      <a href="berkut.html" class="cat-card">
+        <img src="images/klassika-1.jpg" alt="Охота с беркутом">
+        <div class="cat-title">ОХОТА С БЕРКУТОМ</div>
+      </a>
+      <a href="beautiful-places.html" class="cat-card">
+        <img src="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=800&q=80" alt="Красивые места">
+        <div class="cat-title">КРАСИВЫЕ МЕСТА</div>
+      </a>
+      <a href="tours.html" class="cat-card">
+        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Туры">
+        <div class="cat-title">ТУРЫ</div>
+      </a>
     </div>
-  </header>
+  </div>
+</header>
 
-  <footer>
-    © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности
-  </footer>
+<footer>
+  © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности<br>
+  +996 500 059 988 · +996 702 487 381
+</footer>
+
 </body>
 </html>
