--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="subtitle">Лучшие отели, юрты, шоу беркутчи и туры на Иссык-Куле</div>
 
     <div class="categories">
-      <a href="oteli.html" class="cat-card">
+      <a href="hotels.html" class="cat-card">
         <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
         <div class="cat-title">ОТЕЛИ</div>
       </a>
@@ -174,7 +174,7 @@
 
 <footer>
   © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности<br>
-  +996 500 059 988 · +996 702 487 381
+  +996 709 100 020 · +996 702 703 456
 </footer>
 
 </body>
