--- a/berkut.html
+++ b/berkut.html
@@ -3,29 +3,95 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Шоу беркутчи • Боконбаево • Иссык-Куль</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+<title>Охота с беркутом • Южный Берег Иссык-Куля</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&display=swap" rel="stylesheet">
 <style>
-  body{background:linear-gradient(to bottom,#0f172a,#1e293b);color:#fff;margin:0;padding:20px;font-family:Arial,sans-serif}
-  .container{max-width:1200px;margin:auto;display:grid;gap:30px;grid-template-columns:repeat(auto-fit,minmax(360px,1fr))}
-  .card{background:#1e293b;border-radius:28px;overflow:hidden;box-shadow:0 15px 40px rgba(0,0,0,.7);transition:.3s}
-  .card:hover{transform:translateY(-10px);box-shadow:0 20px 50px rgba(103,232,249,.3)}
+  *{margin:0;padding:0;box-sizing:border-box}
+  body{
+    font-family:'Inter',sans-serif;
+    background:linear-gradient(to bottom,#0a0a0a,#001020);
+    color:#f0f0f0;
+    min-height:100vh;
+  }
+  /* КНОПКА НАЗАД */
+  .back-btn{
+    position:fixed;
+    top:20px;
+    left:20px;
+    z-index:999;
+    background:rgba(0,212,255,0.15);
+    backdrop-filter:blur(10px);
+    border:1px solid rgba(0,212,255,0.4);
+    color:#00ffcc;
+    padding:12px 20px;
+    border-radius:50px;
+    font-weight:600;
+    font-size:1rem;
+    text-decoration:none;
+    box-shadow:0 4px 15px rgba(0,0,0,0.5);
+    transition:all .3s;
+  }
+  .back-btn:hover{
+    background:rgba(0,212,255,0.3);
+    transform:scale(1.05);
+    box-shadow:0 8px 25px rgba(0,212,255,0.4);
+  }
+  .back-btn::before{
+    content:"← ";
+    font-size:1.3em;
+  }
+  /* Основной контент */
+  .container{
+    max-width:1200px;
+    margin:0 auto;
+    padding:100px 20px 60px;
+    display:grid;
+    gap:40px;
+    grid-template-columns:repeat(auto-fit,minmax(360px,1fr));
+  }
+  .card{
+    background:rgba(25,35,50,0.92);
+    backdrop-filter:blur(16px);
+    border:1px solid rgba(0,212,255,0.25);
+    border-radius:28px;
+    overflow:hidden;
+    box-shadow:0 15px 40px rgba(0,0,0,.7);
+    transition:.4s;
+  }
+  .card:hover{transform:translateY(-12px)}
   .swiper{height:460px}
   .swiper-slide img{width:100%;height:100%;object-fit:cover}
-  .swiper-pagination-bullet{background:rgba(255,255,255,.4)}
-  .swiper-pagination-bullet-active{background:#fff;transform:scale(1.4)}
   .card-body{padding:30px;text-align:center}
-  h3{margin:0 0 16px;font-size:1.8em;color:#67e8f9;text-shadow:0 2px 5px rgba(0,0,0,.5)}
-  .desc{font-size:1.15em;margin:15px 0;color:#e2e8f0;line-height:1.6}
+  h3{font-size:1.8em;color:#67e8f9;margin-bottom:15px}
+  .desc{font-size:1.15em;line-height:1.6;margin:15px 0;color:#e2e8f0}
   .price{font-size:1.7em;font-weight:bold;color:#86efac;margin:20px 0}
-  .contact{margin:20px 0}
-  .name{color:#fcd34d;font-weight:bold;font-size:1.4em;margin-bottom:6px}
-  .phone{color:#fff;font-size:1.3em}
-  .btn{display:inline-block;margin:20px auto;padding:17px 50px;background:linear-gradient(135deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;font-size:1.2em;transition:.3s;box-shadow:0 5px 15px rgba(103,232,249,.4)}
-  .btn:hover{transform:scale(1.05);box-shadow:0 8px 25px rgba(103,232,249,.5)}
+  .name{color:#fcd34d;font-weight:bold;font-size:1.4em}
+  .phone{color:#fff;font-size:1.3em;margin:8px 0}
+  .btn{
+    display:inline-block;
+    padding:17px 50px;
+    background:linear-gradient(135deg,#67e8f9,#22d3ee);
+    color:#0f172a;
+    border-radius:50px;
+    font-weight:bold;
+    font-size:1.2em;
+    text-decoration:none;
+    box-shadow:0 5px 15px rgba(103,232,249,.4);
+    transition:.3s;
+  }
+  .btn:hover{transform:scale(1.05)}
+  @media(max-width:480px){
+    .back-btn{top:15px;left:15px;padding:10px 16px;font-size:0.9rem}
+    .container{padding-top:90px}
+  }
 </style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 </head>
 <body>
+
+<!-- КНОПКА НАЗАД -->
+<a href="index.html" class="back-btn">На главную</a>
+
 <div class="container">
 
   <!-- Мирланов Мерген -->
@@ -40,11 +106,9 @@
       <h3>Классическое шоу с беркутом</h3>
       <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
       <div class="price">от 8000 до 17000 сом</div>
-      <div class="contact">
-        <div class="name">Мирланов Мерген</div>
-        <div class="phone">+996 500 059 988</div>
-      </div>
-      <a href="https://wa.me/996500059988?text=Здравствуйте,%20Мерген!%20Хочу%20на%20шоу%20с%20беркутом" class="btn">Написать в WhatsApp</a>
+      <div class="name">Мирланов Мерген</div>
+      <div class="phone">+996 500 059 988</div>
+      <a href="https://wa.me/996500059988?text=Здравствуйте, Мерген! Хочу на шоу" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 
@@ -60,11 +124,9 @@
       <h3>Классическое шоу с беркутом</h3>
       <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
       <div class="price">от 8000 до 17000 сом</div>
-      <div class="contact">
-        <div class="name">Асылбеков Айдар</div>
-        <div class="phone">+996 702 487 381</div>
-      </div>
-      <a href="https://wa.me/996702487381?text=Здравствуйте,%20Айдар!%20Хочу%20на%20шоу%20с%20беркутом" class="btn">Написать в WhatsApp</a>
+      <div class="name">Асылбеков Айдар</div>
+      <div class="phone">+996 702 487 381</div>
+      <a href="https://wa.me/996702487381?text=Здравствуйте, Айдар! Хочу на шоу" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 
@@ -73,10 +135,7 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
   document.querySelectorAll('.mySwiper').forEach(s => new Swiper(s, {
-    loop: true,
-    autoplay: { delay: 4000 },
-    pagination: { el: '.swiper-pagination', clickable: true },
-    grabCursor: true
+    loop:true, autoplay:{delay:4000}, pagination:{el:'.swiper-pagination',clickable:true}, grabCursor:true
   }));
 </script>
 </body>
