--- a/hotels.html
+++ b/hotels.html
@@ -177,16 +177,15 @@
   <div class="container">
     <h2>Лучшие отели южного берега 2025</h2>
 
-    <div class="grid">
-      <div class="hotel-card">
-        <img src="https://images.unsplash.com/photo-1582719478250-c89cd483e89e?w=1200&auto=format&fit=crop&q=80" alt="Тон Марина">
-        <div class="info">
-          <h3>Тон Марина</h3>
-          <p>5★ • Первая линия • СПА • Бассейн • Всё включено</p>
-          <div class="price">от 18 000 сом / ночь</div>
-          <a href="https://wa.me/996700123456" class="btn">Забронировать</a>
-        </div>
-      </div>
+  <div class="hotel-card">
+  <img src="https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/images/ton-marina.jpg" alt="Тон Марина">
+  <div class="info">
+    <h3>Тон Марина</h3>
+    <p>5★ • Первая линия • СПА • Бассейн • Всё включено</p>
+    <div class="price">от 18 000 сом / ночь</div>
+    <a href="https://wa.me/996700123456" class="btn">Забронировать</a>
+  </div>
+</div>
 
       <div class="hotel-card">
         <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791?w=1200&auto=format&fit=crop&q=80" alt="Кекилик 1">
