--- a/berkut.html
+++ b/berkut.html
@@ -107,7 +107,7 @@
       <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
       <div class="price">от 8000 до 17000 сом</div>
       <div class="name">Шарыпов Курманбек</div>
-      <div class="phone">+996 704 87 54 78</div>
+      <div class="phone">+996 500 875 478</div>
       <a href="https://wa.me/996500875478?text=Здравствуйте, Мерген! Хочу на шоу" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
