--- a/berkut.html
+++ b/berkut.html
@@ -100,7 +100,7 @@
 <h1 style="text-align:center; font-size:2.5rem; color:#ff8c00; margin:20px 0; text-shadow:0 4px 20px rgba(255,215,0,0.4)">Охота с беркутом на южном берегу Иссык-Куля</h1>
 
 <div class="container">
-  <!-- Шарыпов Курманбек -->
+  <!-- Мирланов Мерген -->
   <div class="card">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
@@ -139,6 +139,27 @@
       <div class="name">Асылбеков Айдар</div>
       <div class="phone">+996 702 487 381</div>
       <a href="https://wa.me/996702487381?text=Здравствуйте,%20Айдар!%20Хочу%20на%20шоу" class="btn">Написать в WhatsApp</a>
+    </div>
+  </div>
+</div>
+  <!-- Мукаев Нурсултан -->
+  <div class="card">
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=10223295995375204" alt="Асылбеков Айдар с беркутом"></div>
+        <div class="swiper-slide"><img src="https://lookaside.instagram.com/seo/google_widget/crawler/?media_id=2815933026832930686" alt="Беркутчи в действии"></div>
+        <div class="swiper-slide"><img src="https://lookaside.fbsbx.com/lookaside/crawler/media/?media_id=10223306802085365" alt="Традиционная охота"></div>
+        <div class="swiper-slide"><img src="https://media-cdn.tripadvisor.com/media/attractions-splice-spp-674x446/07/87/4a/7b.jpg" alt="Шоу на южном берегу"></div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+    <div class="card-body">
+      <h3>Классическое шоу с беркутом</h3>
+      <div class="desc">Боконбаево • 30–45 минут<br>Охота на лису и зайца • Фото и видео включены</div>
+      <div class="price">от 8000 до 17000 сом</div>
+      <div class="name">Мукаев Нурсултан</div>
+      <div class="phone">+996 700 353 370</div>
+      <a href="https://wa.me/+996 700 353 370?text=Здравствуйте,%20Айдар!%20Хочу%20на%20шоу" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 </div>
