--- a/berkut.html
+++ b/berkut.html
@@ -159,7 +159,7 @@
       <div class="price">от 8000 до 17000 сом</div>
       <div class="name">Мукаев Нурсултан</div>
       <div class="phone">+996 700 353 370</div>
-      <a href="https://wa.me/+996 700 353 370?text=Здравствуйте,%20Айдар!%20Хочу%20на%20шоу" class="btn">Написать в WhatsApp</a>
+      <a href="https://wa.me/+996 700 353 370?text=Здравствуйте,%20Нурсултан!%20Хочу%20на%20шоу" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 </div>
