--- a/berkut.html
+++ b/berkut.html
@@ -102,7 +102,10 @@
   <div class="card">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="klassika-1.jpg"></div>
+        <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Мирланов Мерген с беркутом" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Шоу с беркутом Мирланова Мергена" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Беркут в полёте" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Традиционное шоу" loading="lazy"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
@@ -120,7 +123,10 @@
   <div class="card">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="aidar.jpg"></div>
+        <div class="swiper-slide"><img src="images/aidar.jpg" alt="Асылбеков Айдар с беркутом" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/aidar.jpg" alt="Айдар в действии" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/aidar.jpg" alt="Традиционная охота" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/aidar.jpg" alt="Шоу на южном берегу" loading="lazy"></div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
@@ -138,8 +144,11 @@
   <div class="card">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src=mukai.jpg></div>
-        </div>
+        <div class="swiper-slide"><img src="images/mukai.jpg" alt="Мукаев Нурсултан с беркутом" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/mukai.jpg" alt="Нурсултан в действии" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/mukai.jpg" alt="Традиционная охота" loading="lazy"></div>
+        <div class="swiper-slide"><img src="images/mukai.jpg" alt="Шоу в Боконбаево" loading="lazy"></div>
+      </div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="card-body">
